--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "typescript": "^5.9.3",
-    "eslint": "^9.39.2",
     "@eslint/compat": "^2.0.2",
     "@eslint/js": "^9.39.2",
     "@total-typescript/ts-reset": "^0.6.1",
+    "@types/bun": "^1.3.8",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
-    "typescript-eslint": "^8.54.0",
-    "prettier": "^3.8.1"
+    "prettier": "^3.8.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0"
   },
   "engines": {
     "bun": ">=1.0.0"
