--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@spotify/web-api-ts-sdk": "^1.2.0",
     "dotenv": "^17.2.3",
     "obs-websocket-js": "^5.0.7",
-    "spotify-web-api-node": "^5.0.2",
     "xstate": "^5.26.0",
     "zod": "^4.3.6"
   },
