--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start": "bun run src/index.ts",
     "lint": "eslint src --ext .ts",
     "check-format": "prettier --check .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "dotenv": "^17.2.3",
     "obs-websocket-js": "^5.0.7",
+    "open": "^11.0.0",
     "xstate": "^5.26.0",
     "zod": "^4.3.6"
   },
